kubernetes/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ruby-prometheus-metrics

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruby-app
  namespace: ruby-prometheus-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruby-app
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "4567"
      labels:
        app: ruby-app
    spec:
      containers:
      - name: ruby-app
        image: banjodocker/ruby-prometheus-app:v1
        ports:
        - containerPort: 4567
      - name: locust
        image: locustio/locust
        command: 
        - "locust"
        - "-f"
        - "/locust/locustfile.py"
        - "--host=http://ruby-app-service"
        - "--headless"
        - "-u"
        - "1"
        - "-r"
        - "1"
        volumeMounts:
        - name: locust-script
          mountPath: /locust
      volumes:
      - name: locust-script
        configMap:
          name: locust-script

---
apiVersion: v1
kind: Service
metadata:
  name: ruby-app-service
  namespace: ruby-prometheus-metrics
  labels:
    app: ruby-app
spec:
  selector:
    app: ruby-app
  ports:
    - name: web
      port: 80
      targetPort: 4567
    - name: metrics
      port: 4567
      targetPort: 4567
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ruby-prometheus-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2-alpine
        ports:
        - containerPort: 6379

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ruby-app-ingress
  namespace: ruby-prometheus-metrics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: public
  tls:
  - hosts:
    secretName: ruby-app-tls
  rules:
  - host:
    http:
      paths:
      - path: /ruby-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ruby-app-service
            port: 
              number: 80
